--- a/_posts/2023-06-21-PQ-柯文哲談重啟服貿-台灣基進-柯文哲拿了什麼籌碼與中國交換.html
+++ b/_posts/2023-06-21-PQ-柯文哲談重啟服貿-台灣基進-柯文哲拿了什麼籌碼與中國交換.html
@@ -27,7 +27,7 @@ author: 潘柏廷
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/123a112d-img_1369-1024x683.jpg" alt="" class="wp-image-140282" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/123a112d-img_1369-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/123a112d-img_1369-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/123a112d-img_1369-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/123a112d-img_1369-1536x1025.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/123a112d-img_1369-2048x1367.jpg 2048w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>台灣基進黨主席王興煥。圖／潘柏廷拍攝</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/123a112d-img_1369-1024x683.jpg" alt="" class="wp-image-140282" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/123a112d-img_1369-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/123a112d-img_1369-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/123a112d-img_1369-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/123a112d-img_1369-1536x1025.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/123a112d-img_1369-2048x1367.jpg 2048w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>台灣基進黨主席王興煥。圖／潘柏廷拍攝</figcaption></figure></div>
 
 
 
@@ -67,11 +67,11 @@ author: 潘柏廷
 
 
 
-<p>吳欣岱指出，  2014 年柯文哲所收割的聲量和光環，除了是當時年輕人對馬英九政府不滿外，更多是表達對中國統戰的反感及不願被統一的意志。柯文哲與黃國昌之流將之轉化為不痛不癢的「反黑箱」，間接顯示背後的中國因素。她進一步質疑，2015 年雙城論壇是不是黑箱？</p>
+<p>吳欣岱指出，&nbsp; 2014 年柯文哲所收割的聲量和光環，除了是當時年輕人對馬英九政府不滿外，更多是表達對中國統戰的反感及不願被統一的意志。柯文哲與黃國昌之流將之轉化為不痛不癢的「反黑箱」，間接顯示背後的中國因素。她進一步質疑，2015 年雙城論壇是不是黑箱？</p>
 
 
 
-<p>吳欣岱認為，柯文哲競選策略是<strong>「對議題不表達明確立場，鼓吹藍綠一樣爛，收割高聲量」</strong>，他一遇到政治語言抗議就轉彎，3、4 月柯文哲曾說「美中台等距」被罵，直接和媒體說民眾聽不懂我就不用了，但是，重啟服貿面對太陽花世代的反撲，柯卻緊抓不放，讓人質疑是否是與中國協議的條件之一？ </p>
+<p>吳欣岱認為，柯文哲競選策略是<strong>「對議題不表達明確立場，鼓吹藍綠一樣爛，收割高聲量」</strong>，他一遇到政治語言抗議就轉彎，3、4 月柯文哲曾說「美中台等距」被罵，直接和媒體說民眾聽不懂我就不用了，但是，重啟服貿面對太陽花世代的反撲，柯卻緊抓不放，讓人質疑是否是與中國協議的條件之一？&nbsp;</p>
 
 
 
@@ -91,4 +91,32 @@ author: 潘柏廷
 
 
 
-<p class="pqnote">馮光遠提到，柯文哲在 2014 年 12 月 15 日當選台北市長後，馬上去見中國前衛生部副部長亦是中國活摘器官負責人黃潔夫，且在黃潔夫任內受到招待 18 次，還被柯文哲本人爆出花名冊，馮光遠不禁要問，柯文哲是否遭中國抓到把柄，為何一上任市長就和黃密會，馬上墨綠變暗紅？</p><p>The post <a href="https://pourquoi.tw/taiwan-news-20230621-1/">柯文哲談重啟服貿　台灣基進：柯文哲拿了什麼籌碼與中國交換？</a> first appeared on <a href="https://pourquoi.tw">pourquoi 報呱</a>.</p>
+<p class="pqnote">馮光遠提到，柯文哲在 2014 年 12 月 15 日當選台北市長後，馬上去見中國前衛生部副部長亦是中國活摘器官負責人黃潔夫，且在黃潔夫任內受到招待 18 次，還被柯文哲本人爆出花名冊，馮光遠不禁要問，柯文哲是否遭中國抓到把柄，為何一上任市長就和黃密會，馬上墨綠變暗紅？</p>
+
+
+
+<h2><strong>被問到黃國昌尚未對柯文哲表態　馮光遠諷：黃國昌是沒刺青的館長</strong></h2>
+
+
+
+<p>QA環節時，記者問馮光遠，九年前參與反服貿的黃國昌至此都尚未回覆，對此有何評論？</p>
+
+
+
+<p>馮光遠表示，黃國昌覺得在柯文哲的光環、所謂勝利的一個方向上，他有可能當法務部長，他太高興了。</p>
+
+
+
+<p>馮光遠帶著嘲諷意味說，黃國昌聽到當法務部長的時候，那個笑臉，心想以後不用再潑一大堆水在頭上，不用再憤怒嘶叫，做一個大的官是他多大的夢想。</p>
+
+
+
+<p>馮光遠強調，他跟黃國昌一起工作了好多年，知道基本上黃國昌腦袋是空的，<strong>黃國昌是一個沒有刺青的館長，就好像館長是一個有刺青的黃國昌。</strong></p>
+
+
+
+<p class="pqnote">馮光遠還說，和黃國昌共事了好幾年，辦公室在他旁邊，一起開過很多次會，基本上，從一個文化人的角度看黃國昌，他就是一個腦袋空空的人，可是他喜歡表演，只喜歡當官的那種感覺，人生為了要在官場裡面謀這樣一個職位、法務部部長，可想見他心裡彭湃，血液熱滾滾的，他好高興啊。</p>
+
+
+
+<p>馮光遠最後還強調，這個人（黃國昌）的腦袋真的是空的，可是他算計別人的腦袋好厲害，馮並嘲諷自己被黃插的兩把刀，至今還感覺得到。</p><p>The post <a href="https://pourquoi.tw/taiwan-news-20230621-1/">柯文哲談重啟服貿　台灣基進：柯文哲拿了什麼籌碼與中國交換？</a> first appeared on <a href="https://pourquoi.tw">pourquoi 報呱</a>.</p>
