Update VOCUS 2023-06-22 patch

--- a/_posts/2023-05-16-VOCUS-全球化的校正之後-5.html
+++ b/_posts/2023-05-16-VOCUS-全球化的校正之後-5.html
@@ -20,8 +20,7 @@ author: 王立第二戰研所
 <ul>
   <li class="draft-block draft--li">來源：公視</li>
 </ul>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/OpZaxAoXpjs"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/OpZaxAoXpjs"></iframe></div>
 <div class="draft-block draft--p left">結果就是，這幾年開始有人驚覺，會不會全世界只有中國，可以做到無限制壓搾勞工、轉嫁汙染到環境、還具有一定教育水準、有錢就願意當奴工？</div>
 <div class="draft-block draft--p left">但這可是文化大革命，破壞一整個價值基礎的結果欸，有一些講勞工的書籍，案例挑80年代的台灣加工廠場景，說的慘況好比英國工業革命的紡織工……實際就沒有那麼慘啊，台灣過去再怎樣誇張，對環境與勞工的壓榨破壞，都沒有中國這些年那麼扯淡。</div>
 <div class="draft-block draft--p left">這其實是有一個傳播鏈，筆者也講過很多次，工業化的國家總有一群道德最卑劣，卻持有些技術的人，從歐美跑到日本，教會一批徒弟後，日本徒弟品行最糟的，在台灣找到傳人，然後台灣的弟子在生活品質要求提高後混不下去，跑去中國教了沒有道德底線的這群。</div>
@@ -33,7 +32,7 @@ author: 王立第二戰研所
 <ul>
   <li class="draft-block draft--li">編：三聚氰胺毒奶粉事件就是如此，各國進口同樣的奶粉分裝，在中國就會裝進不同的東西。（來源：<a href="https://theinitium.com/article/20180804-mainland-melamine-trailer/" target="_blank" class="draft--a">端傳媒</a>）</li>
 </ul>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/_vzTJf_7-Ag"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/_vzTJf_7-Ag"></iframe></div>
 <div class="draft-block draft--p left">扯遠了，中國作為世界工廠，提供超低廉產品，確實提升世界各國生活水準，但造成的本國失業與勞工購買力低落，幾十年下來都無法解決，造就一批批憤恨的工人。</div>
 <h3 class="draft-block draft--h3" name="header-88pr0">技術外移產業空洞化，各國為全球化假象付出巨大代價</h3>
 <div class="draft-block draft--p left">問題就在，原本的全球化不是應該建立在價值相同上嗎？這種獨裁還會造假的國家，你們歐美先進國家也買單？柯林頓年代是認為，透過經濟轉變去促成政治變革，這點程度的忍耐是必要的，這麼多年來，越來越少人信這套，認為共產黨死性不改的比例逐年上升。</div>
