--- a/_posts/2023-06-22-PQ-德國福斯汽車堅持新疆工廠未使用強迫勞工-遭指責漠視人權.html
+++ b/_posts/2023-06-22-PQ-德國福斯汽車堅持新疆工廠未使用強迫勞工-遭指責漠視人權.html
@@ -26,7 +26,7 @@ author: 王雪俐
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/6c98a15f-2023_0210_15145200-1024x576.jpg" alt="" class="wp-image-140379" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/6c98a15f-2023_0210_15145200-1024x576.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/6c98a15f-2023_0210_15145200-300x169.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/6c98a15f-2023_0210_15145200-768x432.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/6c98a15f-2023_0210_15145200.jpg 1500w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>德國和維吾爾示威者2023年2月10日在德國沃佛斯堡（Wolfsburg）的福斯汽車總部前示威，抗議福斯汽車罔顧人權，執意要在中國新疆利用強迫勞工生產汽車。<br>圖／Hanno Schedler / GfbV</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/6c98a15f-2023_0210_15145200-1024x576.jpg" alt="" class="wp-image-140379" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/6c98a15f-2023_0210_15145200-1024x576.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/6c98a15f-2023_0210_15145200-300x169.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/6c98a15f-2023_0210_15145200-768x432.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/6c98a15f-2023_0210_15145200.jpg 1500w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>德國和維吾爾示威者2023年2月10日在德國沃佛斯堡（Wolfsburg）的福斯汽車總部前示威，抗議福斯汽車罔顧人權，執意要在中國新疆利用強迫勞工生產汽車。<br>圖／Hanno Schedler / GfbV</figcaption></figure></div>
 
 
 
