--- a/_posts/2023-06-22-INITIUM-早报-滕彪-王秋实等中国人权律师被指控性侵犯.html
+++ b/_posts/2023-06-22-INITIUM-早报-滕彪-王秋实等中国人权律师被指控性侵犯.html
@@ -17,10 +17,10 @@ author:
 <p>心语向《菱传媒》记者表示，“滕彪这种行为已经不是性骚扰，而是强暴未遂。”报导还称，事实上滕彪早就已婚，有两个女儿。</p>
 <p>据《菱传媒》透露，滕彪同意6月22日公开道歉，6月20日他给心语看了道歉声明，心语要求加上“强暴未遂”字样，但滕彪没有回应，并于6月21日发布。</p>
 <h3>施明磊身为政治犯妻子，曾被人权律师性骚扰</h3>
-<p>施明磊是“<a href="https://www.hrichina.org/cht/chang-sha-gong-yi-sa">长沙公益仨</a>”案被抓公益人士程渊的妻子。<a href="https://www.facebook.com/permalink.php?story_fbid=pfbid0QdS3PPxReYRT71Md16GCh72B9kteWdLBGXt5ZwUxik4QQw4NgU4C1RxV7RCvx7iVl&id=100056155540256">周三她在Facebook发文</a>，指2020年夏天她前往长沙维权期间，曾被一名在当地很有名望的邓姓人权律师性骚扰，在场其他人权律师袖手旁观，甚至助纣为虐。</p>
+<p>施明磊是“<a href="https://www.hrichina.org/cht/chang-sha-gong-yi-sa">长沙公益仨</a>”案被抓公益人士程渊的妻子。<a href="https://www.facebook.com/permalink.php?story_fbid=pfbid0QdS3PPxReYRT71Md16GCh72B9kteWdLBGXt5ZwUxik4QQw4NgU4C1RxV7RCvx7iVl&id=100056155540256">周三她在Facebook发文</a>，指2020年夏天她前往长沙维权期间，曾被一名在当地很有名望的邓姓人权律师性骚扰。</p>
 <p>施明磊称，那次晚餐正值“709律师”之一谢阳出狱不久，席上有程渊的辩护律师，还有湖南当地活跃的公民运动人士，与她同行的吴有水律师已经喝醉。</p>
 <p>晚餐后，邓律师以知道“程渊被判的消息”为由，叫施明磊到酒店大堂继续聊，然后将话题转向“男女之爱、性”。当时已半夜12点，施明磊试图离开，邓姓律师却伸手拉她，还说“不要走呀，怎么回事你”。</p>
-<p>施明磊甩开邓，到前台询问谢阳为她订的房间号。她看到谢阳向前台使眼色，随后前台说没查到。施明磊又问吴有水的房间号，前台也说没查到。于是施明磊拨通了其他朋友的电话，并一直保持通话，邓律师才悻悻离开。</p>
+<p>施明磊甩开邓，到前台询问谢阳为她订的房间号。她看到邓律师向前台使眼色，随后前台说没查到。施明磊又问吴有水的房间号，前台也说没查到。于是施明磊拨通了其他朋友的电话，并一直保持通话，邓律师才悻悻离开。</p>
 <p>施明磊称，后来她终于进到自己房间，整晚没有脱衣服，直到凌晨5点也没合眼。吴有水第二天承诺再有这样聚会他不喝酒。但更多施明磊认为信得过的律师，对此事的反应却是邓律师可能喝多了，他们后来也“仍和他觥筹交错”。</p>
 <h3>赵思乐指控人权律师王秋实对她性侵</h3>
 <p>前中国政治记者<a href="https://vocus.cc/article/6493bb53fd897800016852a7?fbclid=IwAR3fvF7n-xWE_NWyLAGSFRLfsRV-Ki35bHMxMUGPD62DZa9R6HxSwiUXXnE_aem_th_ARbETrclPm0LVrCWn1_wpn1d41Vvo8pFf83QB9ADganIcK2kCtkqOkCy5kJ_GXo1TCA">赵思乐发文</a>，指人权律师王秋实2015年代理一个大型政治案件期间，曾骚扰多名被捕者家属，并且对她性侵。</p>
