--- a/_posts/2023-06-23-PQ-中國籍研究員疑似參與千人計畫-外洩日本公家研究數據.html
+++ b/_posts/2023-06-23-PQ-中國籍研究員疑似參與千人計畫-外洩日本公家研究數據.html
@@ -42,13 +42,11 @@ author: 陳怡菱
 
 
 
-<figure class="wp-block-embed aligncenter is-type-video is-provider-youtube wp-block-embed-youtube wp-embed-aspect-16-9 wp-has-aspect-ratio"><div class="wp-block-embed__wrapper">
-<iframe loading="lazy" title="「産総研」情報漏えい　権容疑者が研究チームの「まとめ役」か（2023年6月16日）" src="https://www.youtube.com/embed/8Kj813eLzRk?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-</div><figcaption>東京電視台報導</figcaption></figure>
-
-
-
 <p>《NHK》17 日的報導中提到，根據對調查人員的採訪內容，權恆道疑似參與了中國政府為招募海外優秀研究人員的「<strong>千人計畫</strong>」。警視廳認為，權恆道所做行為可能是向母國泄露數據以作為技術貢獻，目前正在調查詳細情況。</p>
+
+
+
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/8d730d93-3dadd433-2e3a-4dc9-95a4-97d66a6471a6-1024x576.png" alt="" class="wp-image-140457" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/8d730d93-3dadd433-2e3a-4dc9-95a4-97d66a6471a6-1024x576.png 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/8d730d93-3dadd433-2e3a-4dc9-95a4-97d66a6471a6-300x169.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/8d730d93-3dadd433-2e3a-4dc9-95a4-97d66a6471a6-768x432.png 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/8d730d93-3dadd433-2e3a-4dc9-95a4-97d66a6471a6.png 1366w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>產業技術綜合研究所一名中國籍研究員涉嫌外洩日本研究數據。<br>（圖／報呱製圖）</figcaption></figure></div>
 
 
 
@@ -116,7 +114,13 @@ author: 陳怡菱
 
 
 
-<p>權姓嫌疑人不僅出自國防七校還曾兼任教職，這樣的人在國家級研究機構竊取先進技術，其影響重大。而這次遭到外洩的先進技術已經被複製，將永遠不可能回收，<strong>日本的先進技術被中國拿到手了</strong>。</p>
+<p>權姓嫌疑人不僅出自國防七校還曾兼任教職，這樣的人在國家級研究機構竊取先進技術，其影響重大。這次遭到外洩的先進技術已經被複製，日本的先進技術已落入中國手中，將永遠不可能回收。</p>
+
+
+
+<figure class="wp-block-embed aligncenter is-type-video is-provider-youtube wp-block-embed-youtube wp-embed-aspect-16-9 wp-has-aspect-ratio"><div class="wp-block-embed__wrapper">
+<iframe loading="lazy" title="「産総研」情報漏えい　権容疑者が研究チームの「まとめ役」か（2023年6月16日）" src="https://www.youtube.com/embed/8Kj813eLzRk?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</div><figcaption>東京電視台報導</figcaption></figure>
 
 
 
