--- a/_posts/2023-06-23-PQ-義大利參院副議長受外媒專訪-稱西方應採取行動維持台海現狀.html
+++ b/_posts/2023-06-23-PQ-義大利參院副議長受外媒專訪-稱西方應採取行動維持台海現狀.html
@@ -14,7 +14,7 @@ author: 林奕辰
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/b618cf12-未命名設計-1024x473.png" alt="" class="wp-image-140476" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/b618cf12-未命名設計-1024x473.png 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/b618cf12-未命名設計-300x138.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/b618cf12-未命名設計-768x354.png 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/b618cf12-未命名設計-1536x709.png 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/b618cf12-未命名設計.png 1920w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>錢益友（Gian Marco Centinaio）與義大利參議員慕雷莉（Elena Murelli）於 14 日到 19 日訪問台灣，並會見總統蔡英文。／圖：總統府</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/b618cf12-未命名設計-1024x473.png" alt="" class="wp-image-140476" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/b618cf12-未命名設計-1024x473.png 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/b618cf12-未命名設計-300x138.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/b618cf12-未命名設計-768x354.png 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/b618cf12-未命名設計-1536x709.png 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/b618cf12-未命名設計.png 1920w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>錢益友（Gian Marco Centinaio）與義大利參議員慕雷莉（Elena Murelli）於 14 日到 19 日訪問台灣，並會見總統蔡英文。／圖：總統府</figcaption></figure></div>
 
 
 
