--- a/_posts/2023-06-25-INMEDIA-港台6.26推出ai天氣主播-網民-對手唔啱比例-執執佢先啦.html
+++ b/_posts/2023-06-25-INMEDIA-港台6.26推出ai天氣主播-網民-對手唔啱比例-執執佢先啦.html
@@ -10,7 +10,7 @@ author: 獨媒報導
 
 <img src="https://www.inmediahk.net/files/column_images/202306256.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>隨人工智能（AI）科技愈趨成熟，香港電台昨（24日）宣布，將推出AI主播Aida，由明（26日）起，逢星期一至五在港台為聽眾報道天氣。不過，網民對於推出AI主播反映就一般，有人認為Aida「好恐怖」、「無表情」，嫌棄她手臂太瘦及不合比例，「對手唔啱比例呀....執執佢先啦.....」。 亦有人稱AI去人性化，「你叫佢講乜就乜」，又指是主播失業先兆。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/dt8B2Yi3P4" title="螢幕截圖 2023-06-25 下午1.08.51"><img src="https://live.staticflickr.com/65535/52999771240_7cb2e05dd1_b.jpg" alt="螢幕截圖 2023-06-25 下午1.08.51" /></a><br /><em>港台截圖</em></p>
-<p>香港電台昨日於社交平台FaceBook發布一條宣傳片，公布AI天氣主播Aida，由明日起逢星期一至五，主持《香港電台天氣簡報》。短片更介紹Aida受港台「訓練」，「永遠唔會『食螺絲』」。</p>
+<p>香港電台昨日於社交平台Facebook發布一條宣傳片，公布AI天氣主播Aida，由明日起逢星期一至五，主持《香港電台天氣簡報》。短片更介紹Aida受港台「訓練」，「永遠唔會『食螺絲』」。</p>
 <p>宣傳片中的Aida穿紅色背心上衣，胸口扣有支持器官捐贈的標誌。她報道天氣時，雙手放在腹部前持續合實，頭部有輕微郁動亦會眨眼，表情僵硬。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/2w47FPf5VT" title="螢幕截圖 2023-06-25 下午1.08.30"><img src="https://live.staticflickr.com/65535/52998798347_893d0728d9_b.jpg" width="1024" alt="螢幕截圖 2023-06-25 下午1.08.30" /></a><br /><em>港台截圖</em></p>
 <p>不過，網民對於AI 主播反映就偏向負面。有人留言稱是主播失業先兆，「嗰啲半粒鐘一次新聞報道，好快都唔會由真人讀」，有人認為AI「無表情」、「去人性化」，「AI好，你叫佢講乜就乜」。亦有人稱現由AI代替，不用請外勞。</p>
