--- a/_posts/2023-06-25-PQ-瓦格納-叛變-事件-削弱蒲亭統治-引發華府關切俄核武庫.html
+++ b/_posts/2023-06-25-PQ-瓦格納-叛變-事件-削弱蒲亭統治-引發華府關切俄核武庫.html
@@ -26,7 +26,7 @@ author: 王雪俐
 
 
 
-<figure class="wp-block-image size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/cb27cbba-m4-medium3-1024x934.jpg" alt="" class="wp-image-140610" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/cb27cbba-m4-medium3-1024x934.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/cb27cbba-m4-medium3-300x274.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/cb27cbba-m4-medium3-768x701.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/cb27cbba-m4-medium3.jpg 1280w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>瓦格納集團自6月23日起從佔領俄羅斯南部城市羅斯托夫的軍事基地起，一路往北，向莫斯科前進。<br>圖／Institute for the Study of War／報呱製圖</figcaption></figure>
+<figure class="wp-block-image size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/cb27cbba-m4-medium3-1024x934.jpg" alt="" class="wp-image-140610" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/cb27cbba-m4-medium3-1024x934.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/cb27cbba-m4-medium3-300x274.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/cb27cbba-m4-medium3-768x701.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/cb27cbba-m4-medium3.jpg 1280w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>瓦格納集團自6月23日起從佔領俄羅斯南部城市羅斯托夫的軍事基地起，一路往北，向莫斯科前進。<br>圖／Institute for the Study of War／報呱製圖</figcaption></figure>
 
 
 
