--- a/_posts/2023-06-26-PQ-經民連警告勿走-兩岸經濟一體化-柯文哲-貨貿先於服貿.html
+++ b/_posts/2023-06-26-PQ-經民連警告勿走-兩岸經濟一體化-柯文哲-貨貿先於服貿.html
@@ -19,7 +19,7 @@ author: 陳柏諺
 
 
 
-<figure class="wp-block-image size-full is-resized"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/ccf97116-2306261.jpg" alt="" class="wp-image-140701" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/ccf97116-2306261.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/ccf97116-2306261-300x169.jpg 300w" sizes="(max-width: 768px) 100vw, 768px" /><figcaption>經民連 21 日上午於立法院群賢樓外舉行記者會，提出切勿「重啟服貿、貨貿談判」的警告／圖：經濟民主連合提供。</figcaption></figure>
+<figure class="wp-block-image size-full is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/ccf97116-2306261.jpg" alt="" class="wp-image-140701" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/ccf97116-2306261.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/ccf97116-2306261-300x169.jpg 300w" sizes="(max-width: 768px) 100vw, 768px" /><figcaption>經民連 21 日上午於立法院群賢樓外舉行記者會，提出切勿「重啟服貿、貨貿談判」的警告／圖：經濟民主連合提供。</figcaption></figure>
 
 
 
