--- a/_posts/2023-06-26-INMEDIA-7.1佔立會案-智障青年明天答辯-辯方指索取指示有困難-審訊需父親在旁陪伴.html
+++ b/_posts/2023-06-26-INMEDIA-7.1佔立會案-智障青年明天答辯-辯方指索取指示有困難-審訊需父親在旁陪伴.html
@@ -12,7 +12,7 @@ author: 獨媒報導
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/k150p1Nn3M" title="無標題"><img src="https://live.staticflickr.com/65535/53002504094_7043ee4ddf_b.jpg" width="1024" alt="無標題" /></a><br /><em>王宗堯</em></p>
 <p>5名被告否認一項暴動罪，包括：城大編委記者黃家豪（被起訴時21歲）、《熱血時報》記者馬啟聰（30歲）、藝人王宗堯（41歲）、吳志勇（25歲）及林錦均（27歲）。當中黃家豪及馬啟聰另否認「進入或逗留在會議廳範圍」罪，而王宗堯及吳志勇則承認該罪。林錦均另外否認刑事損壞罪，指他於立法會綜合大樓外，損壞該大樓。</p>
 <p>林錦均曾遭扣押在內地，其間須寫下「悔過書」並遭香港警方探望時威嚇。他早前爭議警察記事冊、錄影會面及重組案情的招認均非自願作出，並以「案中案」形式處理。區院暫委法官李志豪上周裁定所有證據均可呈堂。</p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/R5A343N6H7" title="被告何俊諺"><img src="https://live.staticflickr.com/65535/53002357446_7665018cb3_b.jpg" width="1024" height="683" alt="被告何俊諺" /></a><br /><em>何俊諺</em></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/R5A343N6H7" title="被告何俊諺"><img src="https://live.staticflickr.com/65535/53002357446_7665018cb3_b.jpg" width="1024" alt="被告何俊諺" /></a><br /><em>何俊諺</em></p>
 <p><strong>智障被告早前被裁定適合答辯</strong></p>
 <p>另一被告何俊諺（22歲）尚未正式答辯，他早前爭議不適宜受審，辯方的精神科醫生報告評估何有智能障礙、自閉症及思覺失調等，認為他不適合答辯。李官上周亦裁定何俊諺適宜受審，並押後至今天處理所有不認罪被告的正式審訊。</p>
 <p><strong>辯方指難向患精神病被告索指示 申請社工或父親陪同在旁講解審訊</strong></p>
