--- a/_posts/2023-06-27-INITIUM-夏天在欧洲逛剧场-2023柏林戏剧节与维也纳艺术节.html
+++ b/_posts/2023-06-27-INITIUM-夏天在欧洲逛剧场-2023柏林戏剧节与维也纳艺术节.html
@@ -9,7 +9,7 @@ author: 特约撰稿人 甄拔涛
 ---
 
 <p>「华人社会鲜有不带情绪的公共讨论，要能制作一出像《前往达浩的巴士》的制作，不知要待到何时。」</p><p>特约撰稿人 甄拔涛</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230628-culture-berliner-theatertreffen-wiener-festwochen-2023/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/06/764fe676487c4699bd86b35695993ccf.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="柏林戏剧节中的一部戏剧，讲述一群乌克兰妇女和男人，在乌克兰被全面入侵后为自由而战的故事。《FebrUaRY》剧照" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption">柏林戏剧节中的一部戏剧，讲述一群乌克兰妇女和男人，在乌克兰被全面入侵后为自由而战的故事。《FebrUaRY》剧照<span class="credit"></span></figcaption></figure><p><small>甄拔涛：香港剧场编剧、导演、再构造剧场艺术总监，德国曼海姆国家剧院第一位亚裔驻院作家。剧作也在德国不同戏院公演。英文剧本《未来简史》获2016德国柏林戏剧节剧本市集（Theatertreffen Stückemarkt）奖，为首位华人得此殊荣。</small></p>
+            <figcaption itemprop="caption">柏林戏剧节中的一部戏剧，讲述一群乌克兰妇女和男人，在乌克兰被全面入侵后为自由而战的故事。《FebrUaRY》剧照<span class="credit"></span></figcaption></figure><p><small>甄拔涛：香港剧场编剧、导演、再构造剧场艺术总监，德国曼海姆国家剧院驻院作家。剧作也在德国不同戏院公演。英文剧本《未来简史》获2016德国柏林戏剧节剧本市集（Theatertreffen Stückemarkt）奖。</small></p>
 <blockquote>
 <p>“很多东西都是怪异的。但没有什么比人更怪异的了。”</p>
 </blockquote>
