--- a/_posts/2023-06-27-PQ-衛星照佐證中國間諜氣球飛越台日-國防部-對台產生威脅會擊落.html
+++ b/_posts/2023-06-27-PQ-衛星照佐證中國間諜氣球飛越台日-國防部-對台產生威脅會擊落.html
@@ -14,7 +14,7 @@ author: 林志鴻
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/15548692-128716010.jpg" alt="" class="wp-image-128512" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/15548692-128716010.jpg 976w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/15548692-128716010-300x169.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/15548692-128716010-768x432.jpg 768w" sizes="(max-width: 976px) 100vw, 976px" /><figcaption>美國國防部公布的照片顯示，在擊落中國間諜氣球之前，美國空軍戰機曾近距離觀察／圖：US DEPARTMENT OF DEFENSE。</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/15548692-128716010.jpg" alt="" class="wp-image-128512" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/15548692-128716010.jpg 976w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/15548692-128716010-300x169.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/15548692-128716010-768x432.jpg 768w" sizes="(max-width: 976px) 100vw, 976px" /><figcaption>美國國防部公布的照片顯示，在擊落中國間諜氣球之前，美國空軍戰機曾近距離觀察／圖：US DEPARTMENT OF DEFENSE。</figcaption></figure></div>
 
 
 
