--- a/_posts/2023-06-28-INMEDIA-香港-metoo運動-六個不相識的女生-説岀被同一人性騷擾的經歷.html
+++ b/_posts/2023-06-28-INMEDIA-香港-metoo運動-六個不相識的女生-説岀被同一人性騷擾的經歷.html
@@ -10,7 +10,7 @@ author: 獨媒報導
 
 <img src="https://www.inmediahk.net/files/column_images/MT.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>朋友聲淚俱下地哭訴自己被攝影師騷擾那一晚，鄧芳懿（Noah）反覆思量過後，決定在社交平台發帖，列點式介紹模特兒可如何保障自己：先了解對方的風格是甚麼、第一次見面不要單獨在室內、被冒犯時用借口離開…… 在這個被她稱為「影相保護自己手冊」的帖文下，有一段簡單短小的文字，講述自己18歲時，被攝影師黃振強舔她乳頭並以手指插她下體。</p>
 <p>Noah沒有想過，這個帖子會被轉發逾700次，在網絡上泛起一番漣漪；但更沒想過的是，另外還有5個涉嫌被黃振強侵犯的女生，因為她的帖子而願意向《獨媒》重提當年經歷。在她們當中，有學生、畫家、攝影師、餐廳侍應等，也包括在2013年起訴黃振強非禮的女生：「我其實一直都等緊，有其他人講。無諗過，一等就等咗十年。」</p>
-<p>黃振強的作品曾於在巴黎、柏林、紐約、上海等地展出；與他合作過的單位包括香港藝術節、國際詩歌之夜、《號外》雜誌、《聯合文學》等，在業界廣為人知。《獨媒》邀請黃振強當面受訪，惟他用短訊回覆：「有咩好回應？」、「把口生係人地度，佢哋想點講就點講，我唔需要控制佢架？」他又表示：「世界唔係得黑白。」《獨媒》及後再詳列問題向黃查詢，至截稿未獲回覆。</p>
+<p>黃振強的作品曾於巴黎、柏林、紐約、上海等地展出；與他合作過的單位包括香港藝術節、國際詩歌之夜、《號外》雜誌、《聯合文學》等，在業界廣為人知。《獨媒》邀請黃振強當面受訪，惟他用短訊回覆：「有咩好回應？」、「把口生係人地度，佢哋想點講就點講，我唔需要控制佢架？」他又表示：「世界唔係得黑白。」《獨媒》及後再詳列問題向黃查詢，至截稿未獲回覆。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/7eFU7z01e5" title="dennis wong facebook"><img src="https://live.staticflickr.com/65535/53004365527_fd023d0517_z.jpg" alt="dennis wong facebook" /></a><br /><em>黃振強（圖片來源：<a href="mailto:Facebook@Dennis">Facebook@Dennis</a> Wong）</em></p>
 <p>＊＊＊＊＊</p>
 <p>2018年3月，黃振強在Facebook發帖指提供「人類攝影體驗」，地點是其錦田工作室，基本攝影時間為$1000/4小時，包括基本調色和後期處理。但當他透過Instagram私訊當時只有18歲的Noah以及文中其餘幾位女性，邀請她們拍攝時，卻沒有要求收費，更附上個人作品集作參考。Noah開來望了幾眼，認為他雖然拍裸照，但沒有色情感覺，於是答應。</p>
