--- a/_posts/2023-06-29-INITIUM-林夕令粤语词首次入围-金曲奖的资产是多元与自由-2023金曲奖前瞻.html
+++ b/_posts/2023-06-29-INITIUM-林夕令粤语词首次入围-金曲奖的资产是多元与自由-2023金曲奖前瞻.html
@@ -10,7 +10,7 @@ author: 特约撰稿人 陈玠安
 
 <p>「台湾金曲奖以自由为资产传承，但毕竟至今仍以“语言分类”为主，香港作者多年霸榜，粤语歌词却从未被提名、获奖。」</p><p>特约撰稿人 陈玠安</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230630-culture-golden-melody-awards-2023/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/06/a9fc977c8d524edd98b431180363fdd9.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="香港填词人林夕在TED Talks上演讲。YouTube截图" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">香港填词人林夕在TED Talks上演讲。YouTube截图<span class="credit"></span></figcaption></figure><blockquote>
-<p>这个奖有在反映时代吗？它是否给了最亮眼的人以鼓励，以至于，不再只是奖项去鼓励音乐人，而是音乐人照亮奖项。</p>
+<p>这个奖有反映时代吗？它是否给了最亮眼的人鼓励，以至于，不再只是奖项去鼓励音乐人，而是音乐人照亮奖项。</p>
 </blockquote>
 <p>金曲入围名单公布几天，遇上朋友，直接问我“你⋯⋯有评吧？”我当作称赞收下了。确实是与我的品味很相近的名单，也符合我认为当今“金曲奖”的存在价值。这个价值，本文细细说。</p>
 <p>最重要的是，我的担心没有发生，“流量 vs INDIE”，只要这担心没发生，一切都好讨论。谈金曲，还是得先谈谈奖项的样貌。</p>
