--- a/_posts/2023-06-29-PQ-中國制定-對外關係法-為反制裁提供法源依據.html
+++ b/_posts/2023-06-29-PQ-中國制定-對外關係法-為反制裁提供法源依據.html
@@ -34,7 +34,7 @@ author: 陳怡菱
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/6a82280b-6bf62646-ff6b-44fb-85bb-fe04691103ee.jpeg" alt="" class="wp-image-141002" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/6a82280b-6bf62646-ff6b-44fb-85bb-fe04691103ee.jpeg 900w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/6a82280b-6bf62646-ff6b-44fb-85bb-fe04691103ee-300x195.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/6a82280b-6bf62646-ff6b-44fb-85bb-fe04691103ee-768x498.jpeg 768w" sizes="(max-width: 900px) 100vw, 900px" /><figcaption>中國外交部長王毅投書黨媒《人民日報》，稱《對外關係法》為反制裁提供法律依據。<br>（圖／中國外交部）</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/6a82280b-6bf62646-ff6b-44fb-85bb-fe04691103ee.jpeg" alt="" class="wp-image-141002" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/6a82280b-6bf62646-ff6b-44fb-85bb-fe04691103ee.jpeg 900w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/6a82280b-6bf62646-ff6b-44fb-85bb-fe04691103ee-300x195.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/6a82280b-6bf62646-ff6b-44fb-85bb-fe04691103ee-768x498.jpeg 768w" sizes="(max-width: 900px) 100vw, 900px" /><figcaption>中國外交部長王毅投書黨媒《人民日報》，稱《對外關係法》為反制裁提供法律依據。<br>（圖／中國外交部）</figcaption></figure></div>
 
 
 
