--- a/_posts/2023-06-30-PQ-南非陷史上最大電力危機每日限電-盼中國帶來光明.html
+++ b/_posts/2023-06-30-PQ-南非陷史上最大電力危機每日限電-盼中國帶來光明.html
@@ -26,7 +26,7 @@ author: 李熱葵
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/4effa426-1246739844.jpg" alt="" class="wp-image-141148" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/4effa426-1246739844.jpg 976w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/4effa426-1246739844-300x169.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/4effa426-1246739844-768x432.jpg 768w" sizes="(max-width: 976px) 100vw, 976px" /><figcaption>「已經夠了！給人民能源！」<br>南非全國上下電力短缺，不僅影響經濟活動，人民生活更大受影響。<br>圖／ANADOLU AGENCY</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/4effa426-1246739844.jpg" alt="" class="wp-image-141148" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/4effa426-1246739844.jpg 976w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/4effa426-1246739844-300x169.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/4effa426-1246739844-768x432.jpg 768w" sizes="(max-width: 976px) 100vw, 976px" /><figcaption>「已經夠了！給人民能源！」<br>南非全國上下電力短缺，不僅影響經濟活動，人民生活更大受影響。<br>圖／ANADOLU AGENCY</figcaption></figure></div>
 
 
 
