--- a/_posts/2023-07-01-INMEDIA-上任一年-陳茂波外訪開支冠絕高官達213萬-司長辦公室稱未復常機票貴.html
+++ b/_posts/2023-07-01-INMEDIA-上任一年-陳茂波外訪開支冠絕高官達213萬-司長辦公室稱未復常機票貴.html
@@ -13,7 +13,7 @@ author: 獨媒報導
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/LDWs19nbq9" title="A2.2 960"><img src="https://live.staticflickr.com/65535/53015457213_2629c7b15a_b.jpg" width="1024" alt="A2.2 960" /></a></p>
 <p><strong>4月出現11高官同時不在港「奇景」<strong></strong></strong></p>
 <p>除了外訪，司局長們更多是「內交」，部分更是「快閃」行程，即日往返香港與內地。今年4月更出現一幕「奇景」，有6名高官參與立法會訪問大灣區團，再加另外5分官員分別前往北京、重慶等地，一度出現11名司局長不在港的情況。</p>
-<p>《獨媒》於6月向各司長辦公室及政策局查詢，司局長上任一年間的出訪次數、地點、隨行人員及開支。在得到的回覆中，只有民青局、政制局、及醫衞局提供到確實數字，其餘司局長的回覆均有備註部分行程開支未核實，或只屬估算數字；律政司司長更表示暫未能提供兩次內交開支。</p>
+<p>《獨媒》於6月中旬向各司長辦公室及政策局查詢，司局長上任一年間的出訪次數、地點、隨行人員及開支。在得到的回覆中，只有民青局、政制局、及醫衞局提供到確實數字，其餘司局長的回覆均有備註部分行程開支未核實，或只屬估算數字；律政司司長更表示暫未能提供兩次內交開支。</p>
 <p><strong>陳茂波開支稱冠 瑞士8日使近90萬</strong></p>
 <p>在司長方面，財政司司長陳茂波花費最大，7次訪問共花213.9萬元，當中3次為「内交」，分別率領多個政策局及各金融監管機構前往北京拜訪中央財金、商貿等部委；到廣州與廣東省領導會面並考察當地創科企業；以及前往深圳，與深圳市領導會面並考察。内訪行程使費不算多，廣州和深圳之行均屬即日行程，各花5,000元，為期5天的訪京行程則花約16萬。</p>
 <p>而4次外訪團，則合共花逾190萬元，目的地涵蓋中東、新加坡及瑞士，其中8天瑞士之旅耗費最多，當時陳茂波出席在達沃斯舉行的世界經濟論壇年會，並出席多場早午餐會，與政商領袖會面「推廣香港優勢」，連同5名隨行官員共花費89.8萬。使費第二大的是去年10月底的中東之行，為他本屆任期内首次外訪，到訪巴林麥納瑪和沙特阿拉伯利雅德，與官員、工商界領袖等會面，並出席第六屆「未來投資倡議大會」論壇，外加隨行官員4人，11天間開支為50.9萬。出訪團亦包括前往印尼巴厘島，以中國代表團成員身分出席二十國集團領導人峰會（G20峰會）；以及前往新加坡和馬來西亞，出席《南華早報》中國年會2023並到多間大學發表厭演講等，兩個行程分別各自花約23.7萬及32.5萬。</p>
