--- a/_posts/2023-07-01-INITIUM-听话的风景-从余秀华到-house.html
+++ b/_posts/2023-07-01-INITIUM-听话的风景-从余秀华到-house.html
@@ -9,7 +9,8 @@ author: 特约撰稿人 张密云
 ---
 
 <p>「一个农妇写了一首诗，然后一个村庄迎来一次建设。一个喜剧演员讲了个笑话，然后一整个行业变成了不能说的秘密。」</p><p>特约撰稿人 张密云</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230702-roving-reporter-poet-comedy/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/07/f58596e57c3e4eb5aa2d6e046691e97d.jpeg?imageView2/1/w/1080/h/720/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption"><span class="credit"></span></figcaption></figure><h2>横店村有很多诗</h2>
+            <figcaption itemprop="caption"><span class="credit"></span></figcaption></figure><p><small>【编者按】<a href="https://theinitium.com/channel/roving-reporter/">“不重磅记者自留地”</a>是端传媒新开设的专栏，由来自不同地区的记者轮值书写。这些故事也许并不重磅、也非必要，却是记者生涯中，让我们心痒难耐、不吐不快的片刻。这是记者张密云的边走边看。</small></p>
+<h2>横店村有很多诗</h2>
 <p>出租车师傅说，横店村到了。</p>
 <p>我抬头，村标突然出现，一个巨型雕塑。五个有棱有角的立方体错落有致地贴在一起，细看才发现是类似书脊的设计：从左到右分别是《月光落在左手上》、《摇摇晃晃的人间》、《我们爱过又忘记》和《无端欢喜》，中间则写着“横店”两个大字，还有它的英文翻译 HENGDIAN VILLAGE。</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230702-roving-reporter-poet-comedy/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/07/ee2ed5d64373437692d047f890deeabb.png?imageView2/1/w/1080/h/716/format/jpg" alt="湖北横店村。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
