--- a/_posts/2023-07-01-PQ-多國齊聚南中國海軍演-菲律賓巴丹群島湧現恐慌性囤貨.html
+++ b/_posts/2023-07-01-PQ-多國齊聚南中國海軍演-菲律賓巴丹群島湧現恐慌性囤貨.html
@@ -22,7 +22,7 @@ author: 蔡侯塞
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/07/e0d95eff-355654191_643900481106611_3707049141956816653_n.jpg" alt="" class="wp-image-141285" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/07/e0d95eff-355654191_643900481106611_3707049141956816653_n.jpg 1000w, https://storage.googleapis.com/stateless-34-84-11-249/2023/07/e0d95eff-355654191_643900481106611_3707049141956816653_n-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/07/e0d95eff-355654191_643900481106611_3707049141956816653_n-768x511.jpg 768w" sizes="(max-width: 1000px) 100vw, 1000px" /><figcaption>6月20～29日，日本海上自衛隊在硫磺島附近與美國海軍進行2023年實戰排雷訓練和特種掃雷訓練。<br>美日聯合軍演的目的是擴大足以即時因應任務的實戰人員數量，確認裝備和武器的能力，提高與美國海軍的聯合作戰能力。<br>圖／防衛省　海上自衛隊</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/07/e0d95eff-355654191_643900481106611_3707049141956816653_n.jpg" alt="" class="wp-image-141285" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/07/e0d95eff-355654191_643900481106611_3707049141956816653_n.jpg 1000w, https://storage.googleapis.com/stateless-34-84-11-249/2023/07/e0d95eff-355654191_643900481106611_3707049141956816653_n-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/07/e0d95eff-355654191_643900481106611_3707049141956816653_n-768x511.jpg 768w" sizes="(max-width: 1000px) 100vw, 1000px" /><figcaption>6月20～29日，日本海上自衛隊在硫磺島附近與美國海軍進行2023年實戰排雷訓練和特種掃雷訓練。<br>美日聯合軍演的目的是擴大足以即時因應任務的實戰人員數量，確認裝備和武器的能力，提高與美國海軍的聯合作戰能力。<br>圖／防衛省　海上自衛隊</figcaption></figure></div>
 
 
 
