--- a/_posts/2023-07-02-INITIUM-早报-法国骚乱第五晚719人被捕-马克龙要求恢复秩序.html
+++ b/_posts/2023-07-02-INITIUM-早报-法国骚乱第五晚719人被捕-马克龙要求恢复秩序.html
@@ -40,5 +40,5 @@ author:
 <p>Twitter、Reddit等平台上的内容都被人工智能公司用作训练模型的数据，而这些平台希望人工智能公司为此付费。</p>
 <h3>路透社称赞台湾音乐语言多样、无审查</h3>
 <p><a href="https://www.reuters.com/world/asia-pacific/taiwan-celebrates-linguistic-diversity-annual-music-awards-2023-07-02/">路透社报导台湾金曲奖</a>，称赞台湾音乐在华语世界有巨大影响力，部分原因是音乐创作不受审查制度的阻碍。</p>
-<p>报导也着重强调了台湾音乐的语言多样性。音乐奖项设立除了表彰国语歌手，也表彰闽南语、客家话和原住民语歌手。</p>
+<p>报导也着重强调了台湾音乐的语言多样性。音乐奖项设立除了表彰华语歌手，也表彰闽南语、客家话和原住民语歌手。</p>
 <p>台湾总统<a href="https://www.facebook.com/tsaiingwen/posts/pfbid02K7ESkmrGK2HeAdAD4tgE9MMPKiYYo1KxwLzniLEYFFRXiHm1iisjUTs9whC3iunjl">蔡英文在Facebook上发文称</a>，“在金曲奖的舞台上，喜爱音乐的心，也消除了不同族群间的语言疆界。在这里，不管大家用的是什么语言，台语、客语、原住民族语、华语、英语、日语，都可以自由歌唱，也让我们凝聚在一起。”</p><p><small class="u-font-sans">本刊载内容版权为端传媒或相关单位所有，未经<a href="mailto:editor@theinitium.com" target="_blank">端传媒编辑部</a>授权，请勿转载或复制，否则即为侵权。</small></p>
